-
Bug
-
Resolution: Done
-
P2: Important
-
6.4
-
None
-
64933f72a7 (qt/qttools/dev) 64933f72a7 (qt/tqtc-qttools/dev)
-
DaVinci 58, DaVinci 59
When documenting a new module, it should not be necessary to mark each class in the module with \since x.y. Instead, each class (or QML type) should inherit that information from the module by default. Overriding with an explicit class-level \since should of course be allowed.
| For Gerrit Dashboard: QTBUG-104613 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 419639,7 | qdoc: Make types inherit \since statement from their module docs | dev | qt/qttools | Status: MERGED | +2 | 0 |