src/qdoc/tree.h
@@ -108,7 +108,8 @@ private: // The rest of the class is private.
     void resolvePropertyOverriddenFromPtrs(Aggregate *n);
     void resolveProperties();
     void resolveCppToQmlLinks();
-    void resolveUsingClauses(Aggregate *parent = nullptr);
+    void resolveSince(Aggregate &aggregate);
+    void resolveUsingClauses(Aggregate &aggregate);
     void removePrivateAndInternalBases(NamespaceNode *rootNode);
     NamespaceNode *root() { return &m_root; }
     [[nodiscard]] const NamespaceNode *root() const { return &m_root; }
